--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>Hello, world!</title>
+  <title>All Skills</title>
 
   <meta charset="UTF-8" />
 
@@ -36,6 +36,9 @@
 
 <body style="background-color: #72ebd0">
 
+<div id="background">
+	<img src="images/allskills_bg.png" alt="Cloudy Sky">
+</div>
 
 </body>
 
