--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,8 @@
 </head>
 
 <body>
+	<form name="newsletter" data-netlify-honeypot="bot-field" data-netlify="true" netlify class="signup">
+		<input type="hidden" name="form-name" value="newsletter" />
+	</form>
 </body>
 </html>
