--- a/public/Athletesignup.html
+++ b/public/Athletesignup.html
@@ -63,7 +63,8 @@
     </head>
     <body>
         <div id="signup">
-            <form name="contact" method="POST" data-netlify="true">
+            <form name="contact" method="POST" data-netlify="true" action="/pages/success">
+                
                 <p id="message">Let us know how to contact you to be apart of AllSkills</p>
                 <p>
                     <input type="email" name="email" placeholder="Email"/>
