--- a/public/Athletesignup.html
+++ b/public/Athletesignup.html
@@ -65,7 +65,7 @@
         <div id="signup">
             <form name="contact" method="POST" data-netlify="true" action="/pages/success">
                 
-                <p id="message">Let us know how to contact you to be apart of AllSkills</p>
+                <p id="message">Let us know how to contact you to be a part of <span style="color:aqua;">AllSkills</span></p>
                 <p>
                     <input type="email" name="email" placeholder="Email"/>
                 </p>
