--- a/public/Athletesignup.html
+++ b/public/Athletesignup.html
@@ -67,6 +67,9 @@
                 
                 <p id="message">Let us know how to contact you to be a part of <span style="color:aqua;">AllSkills</span></p>
                 <p>
+                    <input type="name" name="name" placeholder="Name"/>
+                </p>                
+                <p>
                     <input type="email" name="email" placeholder="Email"/>
                 </p>
                 <p>
