--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,15 @@
 		<input type="hidden" name="form-name" value="newsletter" />
 		<input name="email" style="display:none" value="email" />
 	</form>
+	<form name="partnerships" data-netlify-honeypot="bot-field" data-netlify="true" netlify class="partnerships">
+		<input type="hidden" name="form-name" value="partnerships" />
+		<input name="name" style="display:none" value="name" />
+		<input name="email" style="display:none" value="email" />
+		<select name="type" style="display:none" value="type">
+			<option name="ambassador">Ambassador</option>
+			<option name="business">Business</option>
+			<option name="general">General</option>
+		</select>
+	</form>
 </body>
 </html>
