--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 			<option name="business">Business</option>
 			<option name="general">General</option>
 		</select>
-		<textarea name="message"></textarea>
+		<textarea style="display:none" name="message"></textarea>
 	</form>
 </body>
 </html>
