--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<link rel="canonical" href="https://allskills.ca/" />
+	<title>AllSkills - Competition based NFT Platform for showcasing all skills.</title>
+	<meta name="description" content="AllSkills is a competition based NFT platform where both talented creators and consumers of content can earn money.">
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
