--- a/src/app.html
+++ b/src/app.html
@@ -3,15 +3,17 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="description" content="" />
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>AllSkills - Competition based NFT Platform for showcasing all skills.</title>
+    <meta name="description" content="AllSkills is a competition based NFT platform where both talented creators and consumers of content can earn money.">
 	%svelte.head%
 	<style>
 		body {
 			margin:0;
 		}
 	</style>
+
 </head>
 
 <body>
