--- a/static/links.html
+++ b/static/links.html
@@ -161,7 +161,7 @@
         />
       </svg></a
     >
-    <a href="https://www.instagram.com/AllSkillsNFT">
+    <a href="https://www.instagram.com/AllSkills.ca">
       <svg
         style="enable-background:new 0 0 512 512;"
         version="1.1"
@@ -220,7 +220,7 @@
         ></svg
       >
     </a>
-    <a href="https://www.twitter.com/@AllSkillsNFT"
+    <a href="https://www.twitter.com/@AllSkillsca"
       ><svg style="width:24px;height:24px" viewBox="0 0 24 24">
         <path
           fill="#1DA1F2"
