--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,11 @@
     <meta name="description" content="AllSkills is a competition based NFT platform where both talented creators and consumers of content can earn money.">
 	%svelte.head%
 	<style>
+		html {
+			overflow-x: hidden;
+		}
 		body {
+			overflow-x: hidden;
 			margin:0;
 		}
 	</style>
