--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>AllSkills - Competition based NFT Platform for showcasing all skills.</title>
+	<script async defer data-website-id="c7595bf2-8e87-4086-a74a-1b73bf5c5a65" src="http://69.55.49.19/umami.js"></script>
     <meta name="description" content="AllSkills is a competition based NFT platform where both talented creators and consumers of content can earn money.">
 	%svelte.head%
 	<style>
