--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,8 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>AllSkills - Competition based NFT Platform for showcasing all skills.</title>
-	<script async defer data-website-id="c7595bf2-8e87-4086-a74a-1b73bf5c5a65" src="http://69.55.49.19/umami.js"></script>
-    <meta name="description" content="AllSkills is a competition based NFT platform where both talented creators and consumers of content can earn money.">
+	<title>AllSkills: Move to earn app for all skills. Powered by Web3 technology. </title>
+    <meta name="description" content="Compete head-to-head vs other creators and get rewarded for showcasing your talent. Win to turn your sports, trickshots, music, dance moves, and more into NFTs.">
 	%svelte.head%
 	<style>
 		html {
