--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="canonical" href="https://allskills.ca/" />
 	<title>AllSkills: Move to earn app for all skills. Powered by Web3 technology. </title>
-
     <meta name="description" content="Compete head-to-head vs other creators and get rewarded for showcasing your talent. Win to turn your sports, trickshots, music, dance moves, and more into NFTs.">
 	%svelte.head%
 	<link rel="preload" as="image" href="images/tags_hero_bg.png" />
