--- a/static/links.html
+++ b/static/links.html
@@ -13,6 +13,7 @@
     font-family: 'Bebas Neue';
     margin: 30px;
     font-size: 1.3rem;
+    cursor:pointer;
     }
     h1 {
       text-align: center;
@@ -34,6 +35,7 @@
             margin-bottom: 5px;
             display: inline-block;
             --field-padding: 12px;
+            cursor:pointer;
         }
         *, *::before, *::after {
     box-sizing: border-box;
@@ -116,7 +118,7 @@ form {
 </head>
 <body>
   <h1>Register for AllSkills beta!</h1>
-  <form name="beta" method="POST" data-netlify="true">
+  <form name="beta" method="POST" data-netlify="true" >
     <div>
     <label class="custom-field">
       <input type="text" placeholder="&nbsp;" name="first" required="">
@@ -237,7 +239,7 @@ form {
         <g id="Layer_2" />
       </svg>
     </a>
-    <a href="https://discord.gg/sXYR6EYj">
+    <a href="https://discord.gg/3M3yW9Fx">
       <svg
         width="71"
         height="80"
