--- a/static/links.html
+++ b/static/links.html
@@ -151,7 +151,7 @@ form {
 </head>
 <body>
   <h1>Register for AllSkills beta!</h1>
-  <form name="beta" method="POST" onsubmit="requestAccess()">
+  <form name="beta" onsubmit="requestAccess()">
     <div>
     <label class="custom-field">
       <input type="text" placeholder="&nbsp;" name="first" required="">
