--- a/static/links.html
+++ b/static/links.html
@@ -17,7 +17,7 @@
       }
       let body = JSON.stringify({ email: email });
       console.log(body);
-      let response = await fetch(link + "/beta_signup", {
+      let response = await fetch("https://atagaia.shop/beta_signup", {
         headers: {
           "Content-Type": "application/json",
         },
